--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <h2>A LOT TO GO</h2>
               <span>ROASTERY & LAB</span>
               <strong>가치있는 커피<br>정성이 담긴 시간</strong>
-              <p>어랏투고의 핵심은 프리미엄 원두와 바리스타의 정성입니다.</p>
+              <p>어랏투고의 핵심은<br>프리미엄 원두와 바리스타의 정성입니다.</p>
             </div>
             <img src="images/main/mv_bg02.jpg" alt="">
           </div>
@@ -231,7 +231,7 @@
           <span><img src="images/main/signature_banner.jpg" alt=""></span>
           <div class="txt">
             <h3>SIGNATURE MENU</h3>
-            <p>어랏투고커피의<br class="onlyPC">시그니처 메뉴를 소개합니다.</p>
+            <p>어랏투고커피의<br class="onlyPC"> 시그니처 메뉴를 소개합니다.</p>
           </div>
         </div>
       </section>
