--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="어랏투고커피,ALOTTOGO" />
+  <meta property="og:description" content="어랏투고는 15년 역사의 Zero3 coffee roasters에서 론칭한 프리미엄 커피 브랜드입니다.">
+  <meta property="og:image" content="https://https://jeonghaekyung.github.io/alottogo/images/img_og.jpg">
+  <meta property="og:url" content="https://https://jeonghaekyung.github.io/alottogo">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!--font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -318,5 +322,6 @@
   <script src="js/main.js"></script>
 
 </body>
+
 
 </html>
