--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="어랏투고커피,ALOTTOGO" />
-  <meta property="og:description" content="자체 로스팅 공정을 통해 갓 볶은 신선한 100% 아라비카 고품질 커피">
-  <meta property="og:image" content="https://https://jeonghaekyung.github.io/alottogo/images/img_og.jpg">
-  <meta property="og:url" content="https://https://jeonghaekyung.github.io/alottogo">
+  <meta property="og:title" content="어랏투고커피, ALOTTOGO" />
+  <meta property="og:description" content="자체 로스팅 공정을 통해 갓 볶은 신선한 100% 아라비카 고품질 커피를 경험하세요.">
+  <meta property="og:image" content="https://jeonghaekyung.github.io/alottogo/images/img_og.jpg">
+  <meta property="og:url" content="https://jeonghaekyung.github.io/alottogo">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!--font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -323,6 +323,4 @@
 
 </body>
 
-
 </html>
-
