--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="어랏투고커피, ALOTTOGO" />
-  <meta property="og:description" content="자체 로스팅 공정을 통해 갓 볶은 신선한 100% 아라비카 고품질 커피를 경험하세요.">
+  <meta property="og:description" content="어랏투고는 15년 역사의 Zero3 coffee roasters에서 론칭한 프리미엄 커피 브랜드">
   <meta property="og:image" content="https://jeonghaekyung.github.io/alottogo/images/img_og.jpg">
   <meta property="og:url" content="https://jeonghaekyung.github.io/alottogo">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
