--- a/index.html
+++ b/index.html
@@ -278,10 +278,7 @@
       </div>
       <!--youtube 영상-->
       <div class="youtube_video">
-        <iframe src="https://www.youtube.com/embed/e_BNcvrLVDs?autoplay=1&mute=1&controls=0&loop=1&playlist=e_BNcvrLVDs"
-          title="소리질러!!!A LOT TO GO&quot;" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <video src="media/alot.mp4" autoplay muted loop></video>
       </div>
     </main>
     <!--퀵 영역-->
